# Robot-programming---DMAP

./: README.md
devel/: setup.sh
devel/lib/dmap_live_registration/: dmap_grid_localizer_test  dmap_localize_node  dmap_localizer_test  dmap_show_live_node  dmap_test_in_class  dmap_tracker_node  grid_main  rp_simulator  test_grid_map
devel/lib/pkgconfig/: dmap_live_registration.pc  stage_ros.pc
devel/lib/stage_ros/: stageros
devel/share/dmap_live_registration/cmake/: dmap_live_registrationConfig.cmake
src/dmap_live_registration/: CMakeLists.txt
src/dmap_live_registration/config/: cappero_laser_odom_diag_obstacle_2020-05-06-16-26-03.world  map.yaml  rviz2.rviz
src/dmap_live_registration/launch/: dmap.launch
src/dmap_live_registration/src/: dmap_localize_node.cpp  dmap_show_live_node.cpp  dmap_tracker_node.cpp
src/dmap_live_registration/src/rp_stuff/: dmap_localizer.cpp  grid_main.cpp
stage_ros/: CMakeLists.txt  package.xml
stage_ros/src/: stageros.cpp
